flux/platform/dc-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dc-api
  namespace: dc-system
spec:
  selector:
    app: dc-api
  ports:
    - port: 80
      targetPort: 8080
      name: http
